--- a/work/CetTest.html
+++ b/work/CetTest.html
@@ -34,7 +34,7 @@
     </main>
     <p id="foot"></p>
     <footer>
-        江西科技师范大学李健宏2024--2025
+        江西科技师范大学孙振乾2024--2025
     </footer>
     <form>
         <p>
